--- a/src/Tictactoe/MainMenu.form
+++ b/src/Tictactoe/MainMenu.form
@@ -6,7 +6,6 @@
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
       <Color id="Hand Cursor"/>
     </Property>
-    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -22,7 +21,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,3,41,0,0,3,9"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-112,0,0,2,17"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
@@ -41,7 +40,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="290" y="160" width="332" height="41"/>
+          <AbsoluteConstraints x="160" y="120" width="240" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -54,7 +53,7 @@
           <Font name="Gabriola" size="24" style="1"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Tictactoe/multPlayer.jpg"/>
+          <Image iconType="3" name="/Tictactoe/multPlayer.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Multi Player"/>
       </Properties>
@@ -63,7 +62,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="180" y="370" width="430" height="70"/>
+          <AbsoluteConstraints x="180" y="300" width="190" height="50"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -76,7 +75,7 @@
           <Font name="Gabriola" size="24" style="1"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Tictactoe/singleplayer.jpg"/>
+          <Image iconType="3" name="/Tictactoe/singleplayer.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Single Player"/>
       </Properties>
@@ -85,7 +84,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="190" y="240" width="410" height="60"/>
+          <AbsoluteConstraints x="180" y="200" width="190" height="50"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -98,7 +97,7 @@
           <Font name="Gabriola" size="24" style="1"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Tictactoe/leaderboard.jpg"/>
+          <Image iconType="3" name="/Tictactoe/leaderboard.png"/>
         </Property>
       </Properties>
       <Events>
@@ -106,7 +105,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="180" y="520" width="430" height="60"/>
+          <AbsoluteConstraints x="170" y="420" width="180" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -116,7 +115,7 @@
           <Font name="Gabriola" size="24" style="0"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Tictactoe/exitBtn.jpg"/>
+          <Image iconType="3" name="/Tictactoe/exitbtn.png"/>
         </Property>
       </Properties>
       <Events>
@@ -124,14 +123,14 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="460" y="690" width="140" height="50"/>
+          <AbsoluteConstraints x="310" y="530" width="120" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Tictactoe/menue.jpg"/>
+          <Image iconType="3" name="/Tictactoe/menu.png"/>
         </Property>
       </Properties>
       <AccessibilityProperties>
@@ -139,7 +138,7 @@
       </AccessibilityProperties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="0" y="0" width="780" height="810"/>
+          <AbsoluteConstraints x="0" y="0" width="530" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
